updated index.html, and portfolio.html to add github, linkedin and resume links

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,12 +8,12 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
-  <title>Portfolio-Portfolio</title>
+  <title>Portfolio-About-me</title>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-sm bg-light">
-    <a class="navbar-brand bf-light">Liz Glasser</a>
+    <a class="navbar-brand">Liz Glasser</a>
     <div class="navbar" id="navbarMenu">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
@@ -26,46 +26,41 @@
     </div>
 
   </nav>
-  <div class="container container-expand-md pt-3">
+  <div class="container center container-expand-md pt-3">
     <div class="row">
       <div class="col-12">
-        <h2>Portfolio</h2>
+        <h2>Previous Projects</h2>
       </div>
     </div>
     <div class="row">
-      <div class="col">
-        <img src="assets\images\01.jpg" width="" height="150" alt="Dog">
-        <div class="desc">Dog</div>
-      </div>
-        <div class="col">
-          <img src="assets\images\02.jpg" width="" height="150" alt="Cat">
-          
-          <div class="desc">Cat</div>
-      
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="assets/images/meals.png" alt="Card image cap">
+        <div class="card-body">
+          <p class="card-text">A recipe Finder App using Spoonacular API</p>
+          <a href="https://github.com/lglasser87/FoodAPIProject.git" target="_blank">See it on GitHub</a>
         </div>
-          <div class="col">
-            <img src="assets\images\03.jpg" width="" height="150" alt="Bird">
-            <div class="desc">Bird</div>
-          </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <img src="assets\images\06.jpg" width="" height="150" alt="Dory">
-        <div class="desc">Dory</div>
       </div>
-        <div class="col">
-          <img src="assets\images\05.jpg" width="" height="150" alt="D20">
-          <div class="desc">D20</div>
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="assets/images/pwd.png" alt="Card image cap">
+        <div class="card-body">
+          <p class="card-text">A simple Password Generator</p>
+          <a href="https://github.com/lglasser87/PwdGenerator.git" target="_blank">See it on GitHub</a>
         </div>
-          <div class="col">
-            <img src="assets\images\07.jpg" width="" height="150" alt="Unicorn">
-            <div class="desc">Unicorn</div>
-          </div>
+      </div>
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="assets/images/day.png" alt="Card image cap">
+        <div class="card-body">
+          <p class="card-text">Day Planner Application</p>
+          <a href="https://github.com/lglasser87/dayScheduler.git" target="_blank">See it on GitHub</a>
+        </div>
+      </div>
     </div>
+   
 
 
 
   </div>
+  <div class="spacer"></div>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
   </script>
@@ -76,6 +71,6 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
   </script>
 </body>
-<footer>Copyright</footer>
+<footer class="footer sticky-bottom">Copyright</footer>
 
 </html>
