--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <nav class="navbar navbar-expand-sm bg-light">
-    <a class="navbar-brand bf-light">Liz Glasser</a>
+    <a class="navbar-brand">Liz Glasser</a>
     <div class="navbar" id="navbarMenu">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
@@ -26,31 +26,43 @@
     </div>
 
   </nav>
-  <div class="container container-expand-md pt-3">
+  <div class="container center container-expand-md pt-3">
     <div class="row">
       <div class="col-12">
         <h2>About Me</h2>
       </div>
     </div>
     <div class="row">
-      <div class="col-4">
-        <img src="assets\images\liz2.jpg" width="200" height="220" alt="Liz Glasser">
+      <div class="col-md-3">
+        <img class="img mx-auto d-block" src="assets\images\liz2.jpg" width="180" height="220" alt="Liz Glasser">
       </div>
-      <div class="col-8">
+      <div class="col-md-9">
         <p class="Liz1">I'm an instructional designer with five years of experience that creates e-learning
           modules,video editing, in class training, etc.</p>
-      </div>
+          <div class="col-md-9">
+            <p class="liz2">I'm hoping to learn Web Development, to enrich my skillset and find better ways to make training
+              fun and easy to understand in a corporate level. </p>
+          </div>
+        </div>
+       <div class="row">
+        <div class="col-12 justify-content-center">
+           <ul class="list-group-flush list-group-horizontal">
+            <li class="list-group-item">
+            <a href="https://www.linkedin.com/in/lizbeth-glasser-1379073b" target="_blank">LinkedIn</a></li>
+
+            <li class="list-group-item">
+            <a href="https://github.com/lglasser87" target="_blank">GitHub</a></li>
+            <li class="list-group-item">
+            <a href="assets\Resume_Lizbeth_A_Glasser_2019.pdf" target="_blank">Resume</a></li> 
+          </ul>
+        </div>
     </div>
-    <div class="row">
-      <div class="col-12">
-        <p class="liz2">I'm hoping to learn Web Development, to enrich my skillset and find better ways to make training
-          fun and easy to understand in a corporate level. </p>
-      </div>
     </div>
 
 
 
   </div>
+  <div class="spacer"></div>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
   </script>
@@ -61,6 +73,6 @@
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
   </script>
 </body>
-<footer>Copyright</footer>
+<footer class="footer sticky-bottom">Copyright</footer>
 
 </html>
