updated portfolio.html file

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,6 +34,17 @@
     </div>
     <div class="row">
       <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="assets/images/durgens.png" alt="Card image cap">
+        <div class="card-body">
+          <p class="card-text">Danguns and Durgens</p>
+          <p class="card-text">A simple text-based, single-player, D&D-esque app</p>
+          <a href="https://github.com/lglasser87/project2.git" target="_blank">See it on GitHub</a>
+        </br>
+          <a href="https://nameless-mountain-15358.herokuapp.com/" target="_blank">See it on Heroku</a>
+        </div>
+      </div>
+    <div class="row">
+      <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="assets/images/meals.png" alt="Card image cap">
         <div class="card-body">
           <p class="card-text">A recipe Finder App using Spoonacular API</p>
@@ -52,6 +63,7 @@
         <div class="card-body">
           <p class="card-text">Day Planner Application</p>
           <a href="https://github.com/lglasser87/dayScheduler.git" target="_blank">See it on GitHub</a>
+     
         </div>
       </div>
     </div>
